create interface main to interate command line